Fixed logo styling on mobile.

--- a/assets/scss/_variables_project.scss
+++ b/assets/scss/_variables_project.scss
@@ -18,27 +18,6 @@ $navbar-dark-color: rgba($white, 1);
 $navbar-dark-hover-color: rgba($white, 0.75);
 $navbar-dark-active-color: $navbar-dark-color;
 
-// Logo and brand styling
-
-.td-navbar {
-
-  .navbar-brand {
-    .brand-name {
-      display: none;}
-    .navbar-logo {
-      svg {
-          position: absolute;
-          z-index: 33;
-          margin: -32px 10px 0 10px;
-          padding: 10px;
-          height: 95px;
-          background: white;
-          border: 2px solid #4279f4;
-          border-top: none;}
-    }
-  }
-}
-
 // Front page styling
 
 .section-head {
